@@ -1,7 +1,8 @@
-AC_INIT(src/calc.c)
+AC_INIT([genius], [1.0.16])
+AC_CONFIG_SRCDIR([src/calc.c])
+AM_INIT_AUTOMAKE([dist-xz])
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(genius,1.0.16)
 
 dnl make sure we keep ACLOCAL_FLAGS around for maintainer builds to work
 AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS")
