@@ -1,3 +1,9 @@
+Tue Dec 11 00:10:02 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* configure.in, src/Makefile.am: exorcise last vestiges of the
+	  linpack inclusion fiasco, and update to new automake initialization
+	  format, and also create xz archives on dist
+
 Mon Dec 10 20:58:42 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: add ability to fit dependent axis automatically
